plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
}

apply plugin: 'java'

def getCurrentVersion() {
    return version.toString().split('\\.').collect { it.toInteger() }
}

def incrementVersion() {
    def currentVersion = getCurrentVersion()
    currentVersion[2] += 1 // Increase the patch version
    return currentVersion.join('.')
}

// Set the initial version if not defined
if (!version) {
    version = '1.0.0' // Set your starting version here
}

// Task to increment the version
tasks.register('incrementVersion') {
    doLast {
        def newVersion = incrementVersion()
        project.version = newVersion

        // Optionally, write the new version back to a file
        def versionFile = file('gradle.properties')
        if (versionFile.exists()) {
            def props = new Properties()
            versionFile.withInputStream { props.load(it) }
            props.setProperty('projectVersion', newVersion)
            versionFile.withOutputStream { props.store(it, null) }
        }
        println "Version updated to $newVersion"
    }
}

// Hook the increment version task to run before the build task
build.dependsOn incrementVersion

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

version = '1.0.0'
group = 'org.essentials.custom_background_music'

base {
    archivesName = 'custom_background_music'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // This version handles the NeoForge dependency automatically
    version = "21.1.213"

    runs {
        client {
            client()
            systemProperty 'neoforge.logging.console.level', 'debug'
        }
        server {
            server()
            programArgument '--nogui'
        }
    }

    mods {
        custom_background_music {
            sourceSet sourceSets.main
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    // NeoForge maven is usually handled by the plugin, but keeping it is fine
    maven { url = "https://maven.neoforged.net/releases" }
}

dependencies {
    // JLayer for compilation and runtime
    implementation "javazoom:jlayer:1.0.1"

    // This tells NeoForge to bundle the library into your mod jar
    jarJar "javazoom:jlayer:1.0.1"

    additionalRuntimeClasspath "javazoom:jlayer:1.0.1"
}